EXTRA_DIST		= taco.startup.in taco-config.in tacoenv.sh.in tacoenv.csh.in taco.in taco-manager.sh.in

dist_sbin_SCRIPTS 	= taco.shutdown

nodist_sbin_SCRIPTS 	= taco-config taco.startup 

nodist_template_SCRIPTS = taco taco-manager.sh

## nodist_sysconf_DATA 	= tacoenv.sh tacoenv.csh

nodist_template_DATA 	= tacoenv.sh tacoenv.csh
